# Peak

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: calculations.py  config.py  database.py  models.py  oauth2.py  schemas.py  utils.py
app/routers/: user.py
nginx/: nginx.conf
